[tool.poetry]
name = "atcoder-growth"
version = "0.1.0"
description = ""
authors = ["takumi-okamoto <okamototakumi227@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.41.1"
plotly = "^5.24.1"
jsonlines = "^4.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
